# dtc-ml-zoomcamp

./: .gitignore  README.md  pyproject.toml
01_intro/: homework.ipynb
02_regression/: homework.ipynb
03_classification/: homework.ipynb
04_evaluation/: homework.ipynb
05_deployment/: Dockerfile  downloader.py  loader.py  pyproject.toml  send_requst.py  server.py
06_trees/: hw.ipynb
08_deep_learning/: hw.ipynb
09_serverless/: Dockerfile  Makefile  hw.ipynb  lambda_function.py
10_kubernetes/: deployment.yaml  services.yaml
