[project]
name = "05-deployment"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi>=0.119.1",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.119.1",
    "requests>=2.32.5",
]
